Added lock icon to samplesInfoContainer. Functional to toggle on/off while pinning. Had to change organization of samplesInfoContainer but all necessary code changed. Have not tested scaling with lock.